# vibeusage

./: .coverage  .env.example  .gitignore  .goreleaser.yml  .pre-commit-config.yaml  2026-01-15-service-integrations.md  AGENTS.md  CHANGELOG.md  FIXIT_PLAN.md  IDIOMATIC_PLAN.md  Justfile  PARITY_PLAN.md  PLAN.md  PROMPT_build.md  PROMPT_plan.md  README.md  ccusage_example.py  coverage.xml  go.mod  go.sum  install.ps1  install.sh  main.go  pyproject.toml  ralph.sh
.github/workflows/: lint.yml  release.yml  test.yml
cmd/: auth.go  auth_test.go  cache.go  config.go  config_test.go  context_test.go  helpers_test.go  init.go  json_types_test.go  key.go  key_test.go  logger.go  logger_test.go  logging_test.go  root.go  root_test.go  route.go  spinner_test.go  status.go  status_test.go  usage.go
cmd/vibeshots/: main.go  mockdata.go  scenes.go
cmd/vibeusage/: main.go
docs/: config.md  freeze.json  releasing.md
docs/providers/: claude.md  codex.md  copilot.md  cursor.md  gemini.md
internal/catalog/: fetch.go  modelmap.go  modelmap_test.go  multipliers.go  multipliers_test.go  registry.go
internal/cli/: auth.go  auth_test.go  cache.go  cache_test.go  config.go  config_test.go  context_test.go  flags_test.go  helpers_test.go  init.go  init_test.go  json_types_test.go  key.go  key_test.go  logger.go  logger_test.go  logging_test.go  output.go  reuse_policy_test.go  root.go  root_test.go  route.go  route_test.go  spinner_test.go  status.go  status_test.go  statusline.go  testutil_test.go  update.go  update_test.go  usage.go  usage_test.go
internal/config/: cache.go  config.go  config_test.go  credentials.go  enabled.go  filecache.go  migrate.go  migrate_test.go  paths.go  testing.go
internal/deviceflow/: deviceflow.go  run.go  run_test.go
internal/display/: display.go  display_test.go  format.go  format_test.go  json.go  json_test.go  json_types.go  json_types_test.go  routing.go  routing_test.go  spinner.go  spinner_test.go  status.go  statusline.go  statusline_test.go  table.go  terminal.go  testmain_test.go  update_check.go  update_check_test.go
internal/fetch/: config_test.go  orchestrator.go  orchestrator_test.go  pipeline.go  pipeline_test.go  strategy.go  strategy_test.go
internal/httpclient/: client.go  options_test.go  response.go
internal/keychain/: keychain_darwin.go  keychain_other.go
internal/logging/: context.go  context_test.go  logging.go  logging_test.go  testing.go
internal/modelmap/: fetch.go  modelmap.go  modelmap_test.go  multipliers.go  multipliers_test.go  registry.go
internal/models/: models.go  models_test.go  util.go
internal/oauth/: cli_refresh_test.go  oauth.go  oauth_test.go
internal/pace/: pace.go  pace_test.go
internal/prompt/: prompt.go  prompt_test.go  validation.go
internal/provider/: auth.go  auth_test.go  credentials.go  credentials_policy.go  credentials_test.go  provider.go  provider_test.go  registry.go  registry_test.go  response.go  status.go  status_test.go  validation.go  validation_test.go
internal/routing/: display.go  display_test.go  format.go  format_test.go  routing.go  routing_test.go  service.go  service_test.go  testmain_test.go
internal/spinner/: format.go  format_test.go  model.go  model_test.go
internal/testenv/: env.go
internal/updater/: check.go  check_test.go  install_control.go  install_control_test.go  replace_unix.go  replace_windows.go  updater.go  updater_test.go
scripts/: install.sh  screenshots.sh
specs/: 01-architecture.md  02-data-models.md  03-authentication.md  04-providers.md  05-cli-interface.md  06-configuration.md  07-error-handling.md  README.md
src/vibeusage/: __init__.py  __main__.py  models.py
tests/: conftest.py
tests/auth/: __init__.py  test_base.py
tests/cli/: test_app.py  test_auth_commands.py  test_cache_commands.py  test_cli.py  test_config_commands.py  test_init_command.py  test_json_commands.py  test_key_commands.py  test_progress.py  test_status_commands.py  test_usage_commands.py
tests/config/: test_cache.py  test_config.py
tests/core/: test_core.py  test_fetch.py  test_gate.py  test_http.py
tests/display/: test_display.py
tests/errors/: test_errors.py  test_messages.py
tests/models/: test_models.py
tests/providers/: test_claude_oauth.py  test_codex.py  test_copilot.py  test_cursor.py  test_gemini.py  test_providers.py
vibeusage-go/: IMPROVEMENTS.md  go.mod  go.sum  main.go
(+224 files in other folders)
