[project]
name = "vibeusage"
version = "0.1.0"
description = "Track usage across agentic LLM providers"
readme = "README.md"
authors = [
    { name = "Josh Thomas", email = "josh@joshthomas.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "msgspec>=0.18",
    "platformdirs>=4.0",
    "tomli-w>=1.0",
]

[project.scripts]
vibeusage = "vibeusage.__main__:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
