[project]
name = "vibeusage"
version = "0.1.0"
description = "Track usage across agentic LLM providers"
readme = "README.md"
authors = [
    { name = "Josh Thomas", email = "josh@joshthomas.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "msgspec>=0.18",
    "platformdirs>=4.0",
    "tomli-w>=1.0",
]

[project.scripts]
vibeusage = "vibeusage.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/vibeusage",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
